# skeleton2youbot

./: CMakeLists.txt  README.md  angles.bag  mainpage.dox  manifest.xml
msg/: YouBotManipulatorJointAngles.msg
src/: .skeletonFrames2YouBotJointAngles.cpp.swp  skeletonframes_to_youbotangles.cpp  youbot_arm_move.cpp  youbot_manipulator_move.cpp
src/skeleton2youbot/msg/: _YouBotManipulatorJointAngles.py  __init__.py
